--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-23  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/ert.el, emacs-lisp/ert-x.el: Use cl-lib and lexical-binding.
+
 2012-11-22  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* calc/calc.el (calc-gregorian-switch): Move to after calc-refresh
@@ -5,8 +9,8 @@
 	(calc-gregorian-switch): In menu, put dates before regions.
 	This is easier to follow, lines up better in the menu, and lets us
 	coalesce regions that switch at the same time.  Give country
-	names, not "Vatican", as that's better for non-expert users.  Use
-	names that are stable between the date of switch and now, e.g.,
+	names, not "Vatican", as that's better for non-expert users.
+	Use names that are stable between the date of switch and now, e.g.,
 	Bohemia and Moravia (which existed then and now) and not
 	Czechoslovakia (which didn't exist then and doesn't exist now).
 	What is now the U.S. mostly did not switch at the same time as
