--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -12,8 +12,8 @@
 
 2012-11-17  Paul Eggert  <eggert@cs.ucla.edu>
 
-	Calc now uses the Gregorian calendar for all dates,
-	and uses January 1, 1 AD as its day number 1.
+	Calc now uses the Gregorian calendar for all dates (Bug#12633).
+	It also uses January 1, 1 AD as its day number 1.
 	* calc.texi (Date Forms): Document this.
 
 2012-11-16  Glenn Morris  <rgm@gnu.org>
