--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,6 +1,6 @@
 2012-11-22  Paul Eggert  <eggert@cs.ucla.edu>
 
-	* NEWS: Document Calc changes for Gregorian calendar.
+	* NEWS: Document Calc changes for Gregorian calendar (Bug#12633).
 
 2012-10-26  Nicolas Goaziou  <n.goaziou@gmail.com>
 
