--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -4,6 +4,14 @@
 
 2012-11-23  Juri Linkov  <juri@jurta.org>
 
+	* dired.el (dired-mark): Add optional arg `interactive'.
+	Check for `use-region-p' if `interactive' is non-nil.
+	(dired-unmark, dired-flag-file-deletion): Add optional arg
+	`interactive'.  Call `dired-mark' with the arg `interactive'.
+	(Bug#10624)
+
+2012-11-23  Juri Linkov  <juri@jurta.org>
+
 	* wdired.el: Revert 2012-10-17 change partly and replace it with
 	Patch by Christopher Schmidt <christopher@ch.ristopher.com>.
 	(wdired-finish-edit): Add marks for new file names to
