--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-23  Chong Yidong  <cyd@gnu.org>
+
+	* modes.texi (%-Constructs): Fix statement about mode construct
+	padding (Bug#12866).
+
 2012-11-21  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* debugging.texi (Profiling): Make it more clear
