--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-11-23  Eli Zaretskii  <eliz@gnu.org>
+
+	* makefile.w32-in (globals.h, gl-stamp): Use $(SWITCHCHAR) instead
+	of a literal "/".  (Bug#12955)
+	(gl-stamp): Invoke fc.exe directly, not through cmd.
+
 2012-11-23  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Assume POSIX 1003.1-1988 or later for dirent.h (Bug#12958).
