--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-24  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* loading.texi (Named Features): @ -> @@ to fix typo.
+
 2012-11-24  Martin Rudalics  <rudalics@gmx.at>
 
 	* windows.texi (Basic Windows): Fix typo.
