--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-11-24  Eli Zaretskii  <eliz@gnu.org>
+
+	* xdisp.c (draw_glyphs): Don't draw in mouse face if mouse
+	highlighting on the frame was cleared.  Prevents assertion
+	violations when repeatedly clicking on the "Top" link of the
+	"bread-crumbs" in Info buffers.
+
 2012-11-23  Paul Eggert  <eggert@cs.ucla.edu>
 	    Eli Zaretskii  <eliz@gnu.org>
 
