--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-24  Eli Zaretskii  <eliz@gnu.org>
+
+	* make-dist (nt): Adjust to changes in names of the *.manifest
+	files.
+
 2012-11-21  Glenn Morris  <rgm@gnu.org>
 
 	* configure.ac (--enable-profiling): Doc fix.
