--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-11-24  Ken Brown  <kbrown@cornell.edu>
+
+	* keyboard.c (HAVE_MOUSE):
+	* frame.c (HAVE_MOUSE): Remove, and rewrite code as if HAVE_MOUSE
+	were always defined.
+
 2012-11-24  Eli Zaretskii  <eliz@gnu.org>
 
 	* xdisp.c (set_cursor_from_row): Skip step 2 only if point is not
