--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-24  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* doclicense.texi, gpl.texi: Update to latest version from FSF.
+	These are just minor editorial changes.
+
 2012-11-23  Jay Belanger  <jay.p.belanger@gmail.com>
 
 	* calc.texi (Date Formatting Codes): Mention the new beginning of
