--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-25  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* mh-e.texi (Procmail): Fix two @ typos.
+
 2012-11-24  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* doclicense.texi, gpl.texi: Update to latest version from FSF.
