--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-25  Leo Liu  <sdl.web@gmail.com>
+
+	* textmodes/sgml-mode.el (sgml-tag): Fix indentation for closing tag.
+	(Bug#12979)
+
 2012-11-24  Vincent Belaïche  <vincentb1@users.sourceforge.net>
 
 	* textmodes/reftex-parse.el (reftex-parse-from-file): Use variable
