--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,10 @@
+2012-11-25  Bill Wohler  <wohler@newt.com>
+
+	Release MH-E manual version 8.4.
+
+	* mh-e.texi: (VERSION, EDITION, UPDATED, UPDATE-MONTH, Preface):
+	Update for release 8.4.
+
 2012-11-25  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* mh-e.texi (Procmail): Fix two @ typos.
